--- a/trained_models/cta/cta.yml
+++ b/trained_models/cta/cta.yml
@@ -1,51 +1,138 @@
----
-data_dir: example_data
-model_dir: same
-overwrite: False
-random_state: 42
+import os
+import numpy as np
+import plotly.graph_objects as go
+from skimage import measure
+from dash import Dash, html, dcc, Input, Output, callback
+import dash_bootstrap_components as dbc
+import nibabel as nib
+from pathlib import Path
+from scipy.ndimage import zoom
 
-data_prefix: [_0000]
-label_prefix: [brain-mask-mc]
-mask_prefix: [brain-mask-mc]
-mask_dilate: [256, 256, 256]
-filter_zero: 0.001
-resample_spacing: []
-load_shape: []
+# ==================== CẤU HÌNH ====================
+NIFTI_FILE = r"E:\Dataset004_full\iarsna_0004_0000.nii.gz"
+DOWNSAMPLE_FACTOR = 0.5          # Giảm để tiết kiệm RAM (0.5 = 1/8 RAM)
+STEP_SIZE_MC = 2                 # Giảm số điểm mesh, tránh lag
+BLOOD_TH_DEFAULT = 0.18
+BONE_TH_DEFAULT = 0.25
+BONE_OPA_DEFAULT = 0.4
 
-input_function: PatchInputFn3D
-data_plane: ax
-train_dims: [80, 80, 80]
-train_patch_overlap: [4, 4, 4]
-infer_dims: [96, 96, 96]
-infer_patch_overlap: [1.5, 1.5, 1.5]
-augment_train_data: True
-label_interp: 0
+# ==================== LOAD & PROCESS ====================
+def load_and_process():
+    img = nib.load(NIFTI_FILE)
+    data = img.get_fdata().astype(np.float32)
+    data = np.squeeze(data) if data.ndim > 3 else data
+    
+    spacing = img.header.get_zooms()[:3]  # (z, y, x)
+    print(f"Spacing gốc (z,y,x): {spacing} | Shape: {data.shape}")
+    
+    # Downsample
+    if DOWNSAMPLE_FACTOR != 1.0:
+        data = zoom(data, DOWNSAMPLE_FACTOR, order=1)
+        spacing = tuple(s / DOWNSAMPLE_FACTOR for s in spacing)
+        print(f"Sau downsample: Shape {data.shape} | Spacing {spacing}")
+    
+    # Windowing
+    blood = np.clip(data, 80, 600)
+    blood = (blood - 80) / 520.0
+    
+    bone = np.clip(data, 350, 3000)
+    bone = (bone - 350) / 2650.0
+    
+    # Crop
+    margin = 0.18
+    z0, z1 = int(data.shape[0] * margin), int(data.shape[0] * (1-margin))
+    y0, y1 = int(data.shape[1] * margin), int(data.shape[1] * (1-margin))
+    x0, x1 = int(data.shape[2] * margin), int(data.shape[2] * (1-margin))
+    
+    blood = blood[z0:z1, y0:y1, x0:x1]
+    bone  = bone[z0:z1, y0:y1, x0:x1]
+    
+    return blood, bone, spacing
 
-norm_data: True
-norm_labels: False
-norm_mode: ct_norm
+blood, bone, spacing = load_and_process()  # spacing (z,y,x)
 
-model_name: Unet3dBneck
-base_filters: 32
-output_filters: 1
-layer_layout: [3, 4, 4]
-final_layer: sigmoid
-kernel_size: [3, 3, 3]
-data_format: channels_last
-activation: leaky_relu
-mixed_precision: False
-dist_strat: none
+# Tính aspect ratio đúng tỷ lệ vật lý (Plotly dùng x:y:z)
+# Base là chiều nhỏ nhất, scale các chiều khác theo spacing
+min_spacing = min(spacing)
+aspect_ratio = {
+    'x': spacing[2] / min_spacing,  # spacing x = spacing[2]
+    'y': spacing[1] / min_spacing,
+    'z': spacing[0] / min_spacing
+}
+print(f"Aspect ratio (x:y:z): {aspect_ratio['x']:.3f} : {aspect_ratio['y']:.3f} : {aspect_ratio['z']:.3f}")
 
-shuffle_size: 1000
-batch_size: 6
-samples_per_epoch: 6000
-num_threads: 6
-train_fract: 1.0
-test_fract: 0.0
-learning_rate: [0.001, 12, 0.5]
-learning_rate_decay: simple_step
-optimizer: adam
-loss: combo_loss3d
-metrics: [bce, dice, binary_dice]
-num_epochs: 20
-dropout_rate: 0.4
+# ==================== DASH ====================
+app = Dash(__name__, external_stylesheets=[dbc.themes.DARKLY])
+app.title = "CTA 3D Viewer - Fixed Aspect Ratio"
+
+app.layout = html.Div([
+    html.H1("CTA 3D Viewer - RSNA 2025 (Đã fix dẹt)", style={'textAlign': 'center', 'color': '#00ffea'}),
+    dcc.Graph(id='graph-3d', style={'height': '90vh'}),
+    
+    html.Div([
+        html.Label("Threshold Mạch máu (đỏ)", style={'color': 'crimson'}),
+        dcc.Slider(id='blood-th', min=0.05, max=0.5, step=0.005, value=BLOOD_TH_DEFAULT),
+        
+        html.Label("Threshold Xương (xanh)", style={'color': '#00ffea'}),
+        dcc.Slider(id='bone-th', min=0.1, max=0.8, step=0.01, value=BONE_TH_DEFAULT),
+        
+        html.Label("Opacity Xương", style={'color': '#bdc3c7'}),
+        dcc.Slider(id='bone-opa', min=0.1, max=0.9, step=0.05, value=BONE_OPA_DEFAULT),
+    ], style={'padding': '20px', 'background': '#222', 'borderRadius': '10px', 'margin': '20px'})
+], style={'backgroundColor': '#000', 'color': 'white', 'padding': '10px'})
+
+def make_mesh(vol, thresh, color, opacity, name):
+    try:
+        verts, faces, _, _ = measure.marching_cubes(
+            vol, thresh,
+            spacing=(spacing[2], spacing[1], spacing[0]),  # (x,y,z)
+            step_size=STEP_SIZE_MC
+        )
+        print(f"Mesh {name}: {len(verts)} verts, {len(faces)} faces")
+        
+        return go.Mesh3d(
+            x=verts[:,0], y=verts[:,1], z=verts[:,2],
+            i=faces[:,0], j=faces[:,1], k=faces[:,2],
+            color=color, opacity=opacity, name=name,
+            flatshading=True
+        )
+    except Exception as e:
+        print(f"Lỗi {name}: {e}")
+        return None
+
+@callback(
+    Output('graph-3d', 'figure'),
+    Input('blood-th', 'value'),
+    Input('bone-th', 'value'),
+    Input('bone-opa', 'value')
+)
+def update(b_th, bo_th, bo_opa):
+    meshes = []
+    
+    m_blood = make_mesh(blood, b_th, 'crimson', 0.95, "Mạch máu")
+    if m_blood: meshes.append(m_blood)
+    
+    m_bone = make_mesh(bone, bo_th, '#00ffea', bo_opa, "Xương")
+    if m_bone: meshes.append(m_bone)
+    
+    fig = go.Figure(data=meshes)
+    
+    fig.update_layout(
+        scene=dict(
+            aspectmode='manual',
+            aspectratio=aspect_ratio,          # <--- Fix dẹt ở đây!
+            xaxis_title='X', yaxis_title='Y', zaxis_title='Z',
+            bgcolor='black',
+            camera=dict(eye=dict(x=1.8, y=1.8, z=1.0))
+        ),
+        paper_bgcolor='black',
+        margin=dict(l=0,r=0,t=30,b=0),
+        showlegend=True,
+        legend=dict(bgcolor='rgba(0,0,0,0.5)', bordercolor='white')
+    )
+    
+    return fig
+
+if __name__ == '__main__':
+    print("Khởi động viewer... Mở: http://127.0.0.1:8050")
+    app.run(debug=True, port=8050)
